<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414141">

    <ImageButton
        android:id="@+id/homeLink3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <ImageButton
        android:id="@+id/backLink3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="28dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/back_icon" />

    <EditText
        android:id="@+id/searchRecipe"
        android:layout_width="333dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/search_bar_item"
        android:ems="10"
        android:hint="@string/nom_ou_id_de_recette"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="0dp"
        android:textColor="#707070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/searchRecipe"
        app:layout_constraintEnd_toEndOf="@+id/searchRecipe"
        app:layout_constraintTop_toTopOf="@+id/searchRecipe"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/search_icon"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/cat_gorie"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRecipe" />

</androidx.constraintlayout.widget.ConstraintLayout>